<resources>
    <string name="app_name">Proiect_PSO</string>
    <string name="user">Email</string>
    <string name="pass">password</string>
    <string name="remember_credentials">Remember me</string>
    <string name="Login">Login</string>
    <string name="register">Register</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="Password">Password</string>
    <string name="Repass">Re enter Password</string>
    <string name="Email">Mail</string>
    <string name="PhoneNumber">Phone</string>
    <string name="Name">Name</string>
    <string name="Code">Code</string>
    <string name="CodeNumber">Code number</string>
    <string name="Group">Grupa</string>
    <string-array name="User_Select">
        <item>Professor</item>
        <item>Student</item>
    </string-array>
</resources>
